@@ -1,12 +1,11 @@
 Package: R2admb
 Type: Package
 Title: ADMB to R interface functions
-Version: 0.7.4
-Date: 2011-07-19
+Version: 0.7.5
+Date: 2012-12-18
 Author: Ben Bolker, Hans Skaug
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Description: A series of functions to call AD Model Builder (i.e., compile and run models) from within R, read the results back into R as "admb" objects, and provide standard accessors (i.e. coef(), vcov(), etc.)
-Depends: ggplot2
-Suggests: bbmle, lattice, coda, lme4
+Suggests: bbmle, lattice, coda, lme4, ggplot2
 License: GPL
 LazyLoad: yes
