@@ -2,7 +2,7 @@ export(setup_admb,clean_admb,do_admb,compile_admb,run_admb,
        read_admb,read_psv,read_pars,
        stdEr,run.control,mcmc.control,
        write_pin,write_dat)
-import(ggplot2)
+## import(ggplot2)
 
 S3method(print,admb)
 S3method(print,summary.admb)
